[tool.poetry]
name = "wheather-in-moscow"
version = "0.1.0"
description = ""
authors = ["MrLerich <93153582+MrLerich@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "wheather_in_moscow"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
